--- a/privacy.html
+++ b/privacy.html
@@ -98,7 +98,7 @@
   <div class="wrap">
     <header>
       <h1>Privacy Policy <span class="badge">SnapContact</span></h1>
-      <p class="sub"><strong>Quiet Forge Studio</strong> • Last updated: <span>[Jna 01 , 2026]</span></p>
+      <p class="sub"><strong>Quiet Forge Studio</strong> • Last updated: <span>[January 06, 2026]</span></p>
     </header>
 
     <section class="card">
