--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
             <a class="btn" href="/privacy.html">Privacy</a>
             <a class="btn" href="/terms.html">Terms</a>
+             <a class="btn" href="/snapcontact-support.html">Support</a>
 
             <!-- Hidden by default; shown only when visiting /?admin=1 -->
             <a id="golivepocket-btn" class="btn" href="/projects/golive_pocket.html">GoLivePocket</a>
@@ -330,6 +331,7 @@
         <span>
           <a href="/privacy.html">Privacy</a> ·
           <a href="/terms.html">Terms</a> ·
+          <a href="/snapcontact-support.html">Support</a> ·
           <a href="mailto:support@quietforgestudio.org">Contact</a>
         </span>
       </footer>
