--- a/snapcontact-support.html
+++ b/snapcontact-support.html
@@ -1,6 +1,26 @@
-SnapContact App Support
+<section style="max-width: 920px; margin: 0 auto; padding: 24px 18px;">
+  <div style="background:#141416; border:1px solid rgba(255,255,255,0.10); border-radius:14px; padding:20px;">
+    <h1 style="margin:0 0 10px; font-size:26px; color:#f2f2f3; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;">
+      SnapContact App Support
+    </h1>
 
-If you need help or have questions, contact us at:
-support@quietforgestudio.org
+    <p style="margin:0 0 14px; color:#f2f2f3; line-height:1.6; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;">
+      We’re here to help.
+    </p>
 
-We usually respond within 48 hours.
+    <p style="margin:0 0 14px; color:#f2f2f3; line-height:1.6; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;">
+      If you have any questions, feedback, or need assistance with SnapContact, please contact us at:
+      <br />
+      <strong>
+        <a href="mailto:support@quietforgestudio.org" style="color:#9bd0ff; text-decoration:none;">
+          support@quietforgestudio.org
+        </a>
+      </strong>
+    </p>
+
+    <p style="margin:0; color:#b6b6bb; line-height:1.6; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;">
+      We aim to respond within <strong style="color:#f2f2f3;">48 hours</strong>.
+    </p>
+  </div>
+</section>
+
