--- a/index.html
+++ b/index.html
@@ -278,23 +278,17 @@
 
         <article class="card">
           <h3>SnapContact</h3>
-          <p>AI solution to face crop from group picture. (Beta Testing)</p>
+          <p>AI solution to face crop from group picture. </p>
 
-          <p style="margin-top:10px;">
-            <a href="https://groups.google.com/g/quiet-forge-studio" target="_blank">
-               👉 Join the Beta Testing - Google Group first →
-            </a>
-          </p>
-
-          <p style="margin-top:10px;">
+           <p style="margin-top:10px;">
             <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank">
               👉 Available on Google Play →
             </a>
           </p>
           
           <div class="meta">
-            <span class="pill">Status: In progress</span>
-            <span class="pill">Android / iOS</span>
+            <span class="pill pill-live">Status: Live</span>
+            <span class="pill">Android</span>
           </div>
         </article>
 
