--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
         <article class="card">
           <h3>SnapContact</h3>
-          <p>AI solution to face crop from group picture. </p>
+          <p>SnapContact makes it fast and effortless to add a clean face photo to your contacts. </p>
 
            <p style="margin-top:10px;">
             <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank">
