--- a/index.html
+++ b/index.html
@@ -126,8 +126,6 @@
 
     .btn:hover { transform: translateY(-1px); transition: 120ms ease; }
 
-    .store-icon { width: 18px; height: 18px; display: inline-block; }
-
     /* CONTENT */
     .content { padding: 54px 0 72px; }
 
@@ -150,6 +148,23 @@
       border-radius: 18px;
       padding: 18px;
       background: rgba(255,255,255,0.02);
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* Gold accent for SnapContact */
+    .card.snapcontact {
+      border-color: rgba(212,175,55,0.35);
+      box-shadow:
+        0 0 0 1px rgba(212,175,55,0.06) inset,
+        0 10px 30px rgba(0,0,0,0.35);
+    }
+    .card.snapcontact::before {
+      content: "";
+      position: absolute;
+      inset: -2px;
+      background: radial-gradient(600px 240px at 20% 0%, rgba(212,175,55,0.12), transparent 55%);
+      pointer-events: none;
     }
 
     .card h3 { margin: 0 0 6px; font-size: 18px; color: #e9e9ee; }
@@ -174,13 +189,112 @@
       background: rgba(255,255,255,0.01);
     }
 
-    /* green glowing live pill */
     .pill-live {
       color: #0b1f14;
       background: rgba(52,168,83,0.25);
       border: 1px solid rgba(52,168,83,0.55);
       box-shadow: 0 0 8px rgba(52,168,83,0.45), 0 0 18px rgba(52,168,83,0.25);
       font-weight: 600;
+    }
+
+    /* Snappy header inside card */
+    .snap-head {
+      display: flex;
+      gap: 14px;
+      align-items: center;
+      margin-bottom: 10px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .snappy {
+      width: 72px;
+      height: 72px;
+      border-radius: 16px;
+      border: 1px solid rgba(212,175,55,0.35);
+      background: rgba(0,0,0,0.22);
+      padding: 6px;
+      flex: 0 0 auto;
+      display: grid;
+      place-items: center;
+      box-shadow: 0 0 14px rgba(212,175,55,0.12);
+    }
+    .snappy img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: block;
+    }
+
+    .snap-title {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+
+    .snap-title h3 {
+      margin: 0;
+      font-size: 18px;
+      color: #f2ead2;
+      letter-spacing: -0.01em;
+    }
+
+    .snap-sub {
+      font-size: 13px;
+      color: #c9cad4;
+    }
+
+    /* Store badges (gold accent + mobile centered) */
+    .store-badges {
+      margin-top: 14px;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      position: relative;
+      z-index: 1;
+    }
+
+    .store-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px 14px;
+      border-radius: 14px;
+      border: 1px solid rgba(212,175,55,0.25);
+      background: rgba(255,255,255,0.03);
+      font-size: 14px;
+      color: #e9e9ee;
+      transition: transform 120ms ease, box-shadow 120ms ease, border-color 120ms ease;
+    }
+
+    .store-badge:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 10px 28px rgba(0,0,0,0.45);
+      border-color: rgba(212,175,55,0.42);
+    }
+
+    .store-badge svg {
+      width: 22px;
+      height: 22px;
+      flex-shrink: 0;
+      filter: drop-shadow(0 6px 14px rgba(0,0,0,0.35));
+    }
+
+    .store-badge .label {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.2;
+    }
+
+    .store-badge .label small {
+      font-size: 11px;
+      color: #9b9dac;
+    }
+
+    .store-badge .label strong {
+      font-size: 14px;
+      font-weight: 600;
+      color: #f2ead2;
     }
 
     .about {
@@ -192,6 +306,14 @@
     @media (max-width: 860px) {
       .about { grid-template-columns: 1fr; }
       h1 { font-size: 40px; }
+    }
+
+    /* Center store badges on mobile */
+    @media (max-width: 560px) {
+      .store-badges { justify-content: center; }
+      .store-badge { width: 100%; justify-content: center; }
+      .snap-head { align-items: flex-start; }
+      .snappy { width: 64px; height: 64px; }
     }
 
     footer {
@@ -227,7 +349,7 @@
           <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
           <h1>Quiet Forge Studio</h1>
           <p class="lead">
-            We build calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention.
+            We build calm, purposeful apps and tools—crafted with clarity, simplicity,and respect for attention.
           </p>
 
           <div class="cta">
@@ -251,48 +373,72 @@
 
       <section class="grid">
         <!-- ONLY PRODUCT CARD: SnapContact -->
-        <article class="card">
-          <h3>SnapContact</h3>
+        <article class="card snapcontact">
+          <div class="snap-head">
+            <!-- Save your mascot asset as: /assets/Snappy1.png -->
+            <div class="snappy">
+              <img src="/assets/Snappy1.png" alt="Snappy mascot" />
+            </div>
+            <div class="snap-title">
+              <h3>SnapContact</h3>
+              <div class="snap-sub">Auto-detect faces, save instantly — on-device and private.</div>
+            </div>
+          </div>
 
-          <p>
+          <p style="position:relative; z-index:1;">
             SnapContact makes it fast and effortless to add a clean face photo to your contacts.
-          </p>
-          <p style="margin-top:10px;">
             Choose a photo, let SnapContact detect faces directly on your device, select the right person,
             refine the crop if needed, and save it to a new or existing contact — all in just a few taps.
-          </p>
-          <p style="margin-top:10px;">
             Ideal for events, meetups, or any situation where group photos make saving contacts harder than it should be.
-            Whether it’s a solo photo or a group picture, SnapContact helps you quickly identify the correct face and turn it into a
-            polished contact photo.
           </p>
 
-          <p style="margin-top:12px;">
+          <p style="margin-top:12px; position:relative; z-index:1;">
             Built with privacy and speed in mind:
-          </p>
-          <p style="margin-top:8px; color:#c9cad4; line-height:1.7;">
-            • On-device face detection — no uploads, no servers<br/>
-            • Works with both single and group photos<br/>
-            • Auto-crop with manual crop and zoom controls<br/>
-            • Save photos to new or existing contacts<br/>
+            • On-device face detection — no uploads, no servers
+            • Works with both single and group photos
+            • Auto-crop with manual crop and zoom controls
+            • Save photos to new or existing contacts
             • Minimal, premium interface designed for fast workflows
           </p>
 
-          <p style="margin-top:10px;">
-            Your photos never leave your device. All processing happens locally, and contacts are only saved when you choose.
-            SnapContact is a focused, professional tool for keeping your contacts clear, recognizable, and organized.
-          </p>
+          <div class="store-badges">
+            <!-- App Store -->
+            <a
+              class="store-badge"
+              href="https://apps.apple.com/us/app/snapcontact-face-to-contacts/id6757821313"
+              target="_blank"
+              rel="noopener"
+              aria-label="Download SnapContact on the App Store"
+            >
+              <svg viewBox="0 0 384 512" aria-hidden="true">
+                <path fill="#ffffff" d="M318.7 268.6c-.2-36.7 16.4-64.4 51.6-85.8-19.7-28.5-49.4-44.2-88.7-47.3-37.5-3-78.3 22.1-93.3 22.1-15.8 0-51.8-21.2-80.4-21.2-59.1.9-121.9 47.1-121.9 139.6 0 27.3 5 55.4 15 84.1 13.4 36.7 61.6 126.6 112.1 125.1 26.7-.6 45.6-19 80.3-19 33.7 0 51.2 19 80.9 19 50.9-.8 94.4-80.5 107.1-117.4-67.7-32.3-63.7-94.5-62.7-98.2zM259.5 96.7C288.4 61.8 285.8 30 285 18.6c-25.5 1.5-55 17.4-71.8 37.1-18.5 21.4-29.4 47.8-26.4 77.3 27.6 2.1 51.6-11.3 72.7-36.3z"/>
+              </svg>
+              <span class="label">
+                <small>Download on the</small>
+                <strong>App Store</strong>
+              </span>
+            </a>
 
-          <p style="margin-top:12px;">
-            <a href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank" rel="noopener">
-              👉 Available on Google Play →
+            <!-- Google Play -->
+            <a
+              class="store-badge"
+              href="https://play.google.com/store/apps/details?id=com.snapcontact.app"
+              target="_blank"
+              rel="noopener"
+              aria-label="Get SnapContact on Google Play"
+            >
+              <svg viewBox="0 0 512 512" aria-hidden="true">
+                <path fill="#34A853" d="M325.3 234.3L104.6 13.6c-5.4-5.4-12.7-8.4-20.3-8.4v502.6c7.6 0 14.9-3 20.3-8.4l220.7-220.7z"/>
+                <path fill="#FBBC04" d="M432.4 256l-107.1-61.8-120.7 120.7 120.7 120.7L432.4 256z"/>
+                <path fill="#EA4335" d="M325.3 277.7L104.6 498.4c-5.4 5.4-12.7 8.4-20.3 8.4l241-241z"/>
+                <path fill="#4285F4" d="M104.6 13.6l220.7 220.7-241-241c7.6 0 14.9 3 20.3 8.4z"/>
+              </svg>
+              <span class="label">
+                <small>Get it on</small>
+                <strong>Google Play</strong>
+              </span>
             </a>
-          </p>
-          <p style="margin-top:8px;">
-            <a href="https://apps.apple.com/us/app/snapcontact-face-to-contacts/id6757821313" target="_blank" rel="noopener">
-              👉 Available on the App Store →
-            </a>
-          </p>
+          </div>
 
           <div class="meta">
             <span class="pill pill-live">Status: Live</span>
