--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -152,32 +151,21 @@
       overflow: hidden;
     }
 
-    /* Gold accent for SnapContact */
-    .card.snapcontact {
-      border-color: rgba(212,175,55,0.35);
-      box-shadow:
-        0 0 0 1px rgba(212,175,55,0.06) inset,
-        0 10px 30px rgba(0,0,0,0.35);
-    }
-    .card.snapcontact::before {
-      content: "";
-      position: absolute;
-      inset: -2px;
-      background: radial-gradient(600px 240px at 20% 0%, rgba(212,175,55,0.12), transparent 55%);
-      pointer-events: none;
+    /* slight premium gold accent */
+    .card.snap {
+      border-color: rgba(212,175,55,0.22);
+      box-shadow: 0 0 0 1px rgba(212,175,55,0.08) inset;
     }
 
     .card h3 { margin: 0 0 6px; font-size: 18px; color: #e9e9ee; }
     .card p { margin: 0; font-size: 15px; line-height: 1.7; color: #c9cad4; }
 
-    /* keep pills aligned on one line */
     .meta {
       margin-top: 12px;
       display: inline-flex;
       gap: 10px;
-      flex-wrap: nowrap;
+      flex-wrap: wrap;
       align-items: center;
-      white-space: nowrap;
       font-size: 12px;
       color: #9b9dac;
     }
@@ -187,114 +175,139 @@
       border-radius: 999px;
       border: 1px solid #2a2c35;
       background: rgba(255,255,255,0.01);
+      white-space: nowrap;
     }
 
     .pill-live {
-      color: #0b1f14;
-      background: rgba(52,168,83,0.25);
-      border: 1px solid rgba(52,168,83,0.55);
-      box-shadow: 0 0 8px rgba(52,168,83,0.45), 0 0 18px rgba(52,168,83,0.25);
-      font-weight: 600;
+      color: #1a1306;
+      background: rgba(212,175,55,0.22);
+      border: 1px solid rgba(212,175,55,0.45);
+      box-shadow: 0 0 10px rgba(212,175,55,0.18);
+      font-weight: 700;
     }
 
-    /* Snappy header inside card */
-    .snap-head {
+    /* SnapContact header inside card */
+    .snap-top {
       display: flex;
-      gap: 14px;
+      gap: 16px;
       align-items: center;
-      margin-bottom: 10px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .snappy {
-      width: 72px;
-      height: 72px;
-      border-radius: 16px;
-      border: 1px solid rgba(212,175,55,0.35);
-      background: rgba(0,0,0,0.22);
-      padding: 6px;
-      flex: 0 0 auto;
-      display: grid;
-      place-items: center;
-      box-shadow: 0 0 14px rgba(212,175,55,0.12);
-    }
-    .snappy img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: block;
+      justify-content: space-between;
     }
 
     .snap-title {
       display: flex;
-      flex-direction: column;
-      gap: 2px;
+      gap: 12px;
+      align-items: center;
+      min-width: 0;
     }
 
-    .snap-title h3 {
+    .app-icon {
+      width: 46px;
+      height: 46px;
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid rgba(255,255,255,0.14);
+      background: rgba(0,0,0,0.25);
+      flex: 0 0 auto;
+    }
+    .app-icon img { width: 100%; height: 100%; object-fit: cover; display: block; }
+
+    .snap-name {
+      min-width: 0;
+    }
+    .snap-name h3 {
       margin: 0;
       font-size: 18px;
-      color: #f2ead2;
       letter-spacing: -0.01em;
     }
-
     .snap-sub {
+      margin-top: 2px;
       font-size: 13px;
-      color: #c9cad4;
+      color: #9b9dac;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 52ch;
     }
 
-    /* Store badges (gold accent + mobile centered) */
-    .store-badges {
+    /* Snappy mascot */
+    .snappy {
+      width: 88px;
+      height: 88px;
+      border-radius: 18px;
+      background: radial-gradient(60% 60% at 30% 25%, rgba(212,175,55,0.14), rgba(0,0,0,0) 70%);
+      border: 1px solid rgba(212,175,55,0.18);
+      display: grid;
+      place-items: center;
+      flex: 0 0 auto;
+    }
+    .snappy img {
+      width: 96px;
+      height: 96px;
+      object-fit: contain;
+      transform: translateY(2px);
+      filter: drop-shadow(0 10px 24px rgba(0,0,0,0.45));
+    }
+
+    /* Store badges (high-end) */
+    .download-row {
       margin-top: 14px;
       display: flex;
       gap: 12px;
       flex-wrap: wrap;
-      position: relative;
-      z-index: 1;
+      align-items: center;
+      justify-content: flex-start;
     }
 
     .store-badge {
       display: inline-flex;
       align-items: center;
-      gap: 10px;
+      gap: 12px;
       padding: 10px 14px;
       border-radius: 14px;
-      border: 1px solid rgba(212,175,55,0.25);
-      background: rgba(255,255,255,0.03);
-      font-size: 14px;
-      color: #e9e9ee;
-      transition: transform 120ms ease, box-shadow 120ms ease, border-color 120ms ease;
+      border: 1px solid rgba(255,255,255,0.14);
+      background: rgba(255,255,255,0.04);
+      transition: transform 120ms ease, border-color 120ms ease, background 120ms ease;
     }
 
     .store-badge:hover {
       transform: translateY(-1px);
-      box-shadow: 0 10px 28px rgba(0,0,0,0.45);
-      border-color: rgba(212,175,55,0.42);
+      border-color: rgba(212,175,55,0.35);
+      background: rgba(212,175,55,0.08);
     }
 
-    .store-badge svg {
-      width: 22px;
-      height: 22px;
-      flex-shrink: 0;
-      filter: drop-shadow(0 6px 14px rgba(0,0,0,0.35));
+    .store-badge .icon {
+      width: 28px;
+      height: 28px;
+      display: inline-block;
+      opacity: 0.95;
+      flex: 0 0 auto;
     }
 
-    .store-badge .label {
-      display: flex;
-      flex-direction: column;
-      line-height: 1.2;
+    .store-badge .text {
+      display: grid;
+      line-height: 1.1;
     }
-
-    .store-badge .label small {
+    .store-badge .small {
       font-size: 11px;
-      color: #9b9dac;
+      color: #b9bac5;
+      letter-spacing: .02em;
+    }
+    .store-badge .big {
+      font-size: 14px;
+      font-weight: 700;
+      color: #f2ead2;
+      letter-spacing: -0.01em;
     }
 
-    .store-badge .label strong {
-      font-size: 14px;
-      font-weight: 600;
-      color: #f2ead2;
+    /* nicer center on mobile */
+    @media (max-width: 680px) {
+      h1 { font-size: 40px; }
+      .snap-top { flex-direction: column; align-items: flex-start; }
+      .snappy { width: 76px; height: 76px; }
+      .snappy img { width: 84px; height: 84px; }
+      .download-row { justify-content: center; }
+      .card.snap { text-align: left; }
     }
 
     .about {
@@ -305,15 +318,6 @@
 
     @media (max-width: 860px) {
       .about { grid-template-columns: 1fr; }
-      h1 { font-size: 40px; }
-    }
-
-    /* Center store badges on mobile */
-    @media (max-width: 560px) {
-      .store-badges { justify-content: center; }
-      .store-badge { width: 100%; justify-content: center; }
-      .snap-head { align-items: flex-start; }
-      .snappy { width: 64px; height: 64px; }
     }
 
     footer {
@@ -349,7 +353,7 @@
           <span class="badge"><span class="dot"></span> Independent studio • Toronto</span>
           <h1>Quiet Forge Studio</h1>
           <p class="lead">
-            We build calm, purposeful apps and tools—crafted with clarity, simplicity,and respect for attention.
+            We build calm, purposeful apps and tools—crafted with clarity, simplicity, and respect for attention.
           </p>
 
           <div class="cta">
@@ -372,27 +376,39 @@
       <div class="section-title" id="products">Products</div>
 
       <section class="grid">
-        <!-- ONLY PRODUCT CARD: SnapContact -->
-        <article class="card snapcontact">
-          <div class="snap-head">
-            <!-- Save your mascot asset as: /assets/Snappy1.png -->
-            <div class="snappy">
-              <img src="/assets/Snappy1.png" alt="Snappy mascot" />
-            </div>
+        <article class="card snap">
+          <div class="snap-top">
             <div class="snap-title">
-              <h3>SnapContact</h3>
-              <div class="snap-sub">Auto-detect faces, save instantly — on-device and private.</div>
+              <div class="app-icon" aria-hidden="true">
+                <!-- If you have the SnapContact icon, replace path below with your icon file -->
+                <img src="/assets/snapcontact-icon-512.png" alt="SnapContact app icon" onerror="this.style.display='none'">
+              </div>
+              <div class="snap-name">
+                <h3>SnapContact</h3>
+                <div class="snap-sub">Face to Contacts • Clean contact photos in seconds</div>
+              </div>
+            </div>
+
+            <!-- Snappy mascot -->
+            <div class="snappy" title="Snappy (SnapContact mascot)">
+              <!-- Save your mascot as /assets/Snappy1.png -->
+              <img src="/assets/Snappy1.png" alt="Snappy mascot" />
             </div>
           </div>
 
-          <p style="position:relative; z-index:1;">
+          <p style="margin-top:12px;">
             SnapContact makes it fast and effortless to add a clean face photo to your contacts.
-            Choose a photo, let SnapContact detect faces directly on your device, select the right person,
-            refine the crop if needed, and save it to a new or existing contact — all in just a few taps.
+          </p>
+
+          <p style="margin-top:10px;">
+            Choose a photo, let SnapContact detect faces directly on your device, select the right person, refine the crop if needed, and save it to a new or existing contact — all in just a few taps.
+          </p>
+
+          <p style="margin-top:10px;">
             Ideal for events, meetups, or any situation where group photos make saving contacts harder than it should be.
           </p>
 
-          <p style="margin-top:12px; position:relative; z-index:1;">
+          <p style="margin-top:10px;">
             Built with privacy and speed in mind:
             • On-device face detection — no uploads, no servers
             • Works with both single and group photos
@@ -401,41 +417,33 @@
             • Minimal, premium interface designed for fast workflows
           </p>
 
-          <div class="store-badges">
-            <!-- App Store -->
-            <a
-              class="store-badge"
-              href="https://apps.apple.com/us/app/snapcontact-face-to-contacts/id6757821313"
-              target="_blank"
-              rel="noopener"
-              aria-label="Download SnapContact on the App Store"
-            >
-              <svg viewBox="0 0 384 512" aria-hidden="true">
-                <path fill="#ffffff" d="M318.7 268.6c-.2-36.7 16.4-64.4 51.6-85.8-19.7-28.5-49.4-44.2-88.7-47.3-37.5-3-78.3 22.1-93.3 22.1-15.8 0-51.8-21.2-80.4-21.2-59.1.9-121.9 47.1-121.9 139.6 0 27.3 5 55.4 15 84.1 13.4 36.7 61.6 126.6 112.1 125.1 26.7-.6 45.6-19 80.3-19 33.7 0 51.2 19 80.9 19 50.9-.8 94.4-80.5 107.1-117.4-67.7-32.3-63.7-94.5-62.7-98.2zM259.5 96.7C288.4 61.8 285.8 30 285 18.6c-25.5 1.5-55 17.4-71.8 37.1-18.5 21.4-29.4 47.8-26.4 77.3 27.6 2.1 51.6-11.3 72.7-36.3z"/>
+          <p style="margin-top:10px;">
+            Your photos never leave your device. All processing happens locally, and contacts are only saved when you choose.
+          </p>
+
+          <div class="download-row" aria-label="Download SnapContact">
+            <!-- App Store badge -->
+            <a class="store-badge" href="https://apps.apple.com/us/app/snapcontact-face-to-contacts/id6757821313" target="_blank" rel="noopener">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill="currentColor" d="M16.7 13.2c0 2 1.7 2.7 1.7 2.7s-1.3 3.7-3.1 3.7c-.8 0-1.4-.5-2.2-.5s-1.5.5-2.4.5c-1.7 0-3-3.2-3-5.8c0-2.8 1.6-4.2 3.1-4.2c.8 0 1.6.6 2.1.6c.5 0 1.4-.6 2.4-.6c.4 0 1.6.1 2.4 1.2c-.1.1-1.4.8-1.4 2.4ZM14.9 7.2c.5-.6.8-1.4.7-2.2c-.7 0-1.6.5-2.1 1.1c-.5.6-.9 1.4-.7 2.2c.8.1 1.6-.4 2.1-1.1Z"/>
               </svg>
-              <span class="label">
-                <small>Download on the</small>
-                <strong>App Store</strong>
+              <span class="text">
+                <span class="small">Download on the</span>
+                <span class="big">App Store</span>
               </span>
             </a>
 
-            <!-- Google Play -->
-            <a
-              class="store-badge"
-              href="https://play.google.com/store/apps/details?id=com.snapcontact.app"
-              target="_blank"
-              rel="noopener"
-              aria-label="Get SnapContact on Google Play"
-            >
-              <svg viewBox="0 0 512 512" aria-hidden="true">
+            <!-- Google Play badge -->
+            <a class="store-badge" href="https://play.google.com/store/apps/details?id=com.snapcontact.app" target="_blank" rel="noopener">
+              <svg class="icon" viewBox="0 0 512 512" aria-hidden="true">
                 <path fill="#34A853" d="M325.3 234.3L104.6 13.6c-5.4-5.4-12.7-8.4-20.3-8.4v502.6c7.6 0 14.9-3 20.3-8.4l220.7-220.7z"/>
                 <path fill="#FBBC04" d="M432.4 256l-107.1-61.8-120.7 120.7 120.7 120.7L432.4 256z"/>
                 <path fill="#EA4335" d="M325.3 277.7L104.6 498.4c-5.4 5.4-12.7 8.4-20.3 8.4l241-241z"/>
                 <path fill="#4285F4" d="M104.6 13.6l220.7 220.7-241-241c7.6 0 14.9 3 20.3 8.4z"/>
               </svg>
-              <span class="label">
-                <small>Get it on</small>
-                <strong>Google Play</strong>
+              <span class="text">
+                <span class="small">Get it on</span>
+                <span class="big">Google Play</span>
               </span>
             </a>
           </div>
@@ -444,7 +452,12 @@
             <span class="pill pill-live">Status: Live</span>
             <span class="pill">Android</span>
             <span class="pill">iOS</span>
+            <span class="pill">On-device processing</span>
           </div>
+
+          <p style="margin-top:12px; font-size:13px; color:#9b9dac;">
+            Need help? <a href="/snapcontact-support.html">Support</a> or email <a href="mailto:support@quietforgestudio.org">support@quietforgestudio.org</a>
+          </p>
         </article>
       </section>
 
@@ -487,15 +500,10 @@
     (function () {
       const btn = document.getElementById("golivepocket-btn");
       if (!btn) return;
-
       const params = new URLSearchParams(window.location.search);
       const isAdmin = params.get("admin") === "1";
-
-      if (!isAdmin) {
-        btn.style.display = "none";
-      }
+      if (!isAdmin) btn.style.display = "none";
     })();
   </script>
 </body>
 </html>
-
