--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </div>
 
           <div class="snappy">
-            <img src="assets/sanppy1.png" alt="Snappy mascot">
+            <img src="assets/snappy1.png" alt="Snappy mascot">
           </div>
         </div>
 
