--- a/index.html
+++ b/index.html
@@ -390,10 +390,9 @@
             </div>
 
             <!-- Snappy mascot -->
-            <div class="snappy" title="Snappy (SnapContact mascot)">
-              <!-- Save your mascot as /assets/Snappy1.png -->
-              <img src="/assets/Snappy1.png" alt="Snappy mascot" />
-            </div>
+            <div class="snappy">
+            <img src="assets/snappy1.png" alt="Snappy mascot">
+          </div>
           </div>
 
           <p style="margin-top:12px;">
