--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <div class="wrap">
       <div class="top">
         <div class="logo">
-          <img src="/assets/logo-512.jpgg" alt="Quiet Forge Studio logo" />
+          <img src="/assets/logo-512.jpg" alt="Quiet Forge Studio logo" />
         </div>
 
         <div>
