--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <div class="wrap">
       <div class="top">
         <div class="logo">
-          <img src="/assets/QuietForgeStudio_logo.png" alt="Quiet Forge Studio logo" />
+          <img src="/assets/QuietForgeStudio_logo1.png" alt="Quiet Forge Studio logo" />
         </div>
 
         <div>
@@ -381,7 +381,7 @@
             <div class="snap-title">
               <div class="app-icon" aria-hidden="true">
                 <!-- If you have the SnapContact icon, replace path below with your icon file -->
-                <img src="/assets/Logo523.png" alt="SnapContact app icon" onerror="this.style.display='none'">
+                <img src="/assets/logo524.png" alt="SnapContact app icon" onerror="this.style.display='none'">
               </div>
               <div class="snap-name">
                 <h3>SnapContact</h3>
