--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <div class="wrap">
       <div class="top">
         <div class="logo">
-          <img src="/assets/QuietForgeStudio_logo1.png" alt="Quiet Forge Studio logo" />
+          <img src="/assets/Untitled design (48).png" alt="Quiet Forge Studio logo" />
         </div>
 
         <div>
