--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       padding: 72px 0 56px;
       background:
         linear-gradient(180deg, rgba(11,12,15,0.35) 0%, rgba(11,12,15,0.85) 70%, #0b0c0f 100%),
-        url("assets/header2.jpg");
+        url("assets/insert.png");
       background-size: cover;
       background-position: center;
       border-bottom: 1px solid #1f212a;
