Update app icon image source in index.html

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <div class="snap-title">
               <div class="app-icon" aria-hidden="true">
                 <!-- If you have the SnapContact icon, replace path below with your icon file -->
-                <img src="/assets/logo524.png" alt="SnapContact app icon" onerror="this.style.display='none'">
+                <img src="/assets/logoold.png" alt="SnapContact app icon" onerror="this.style.display='none'">
               </div>
               <div class="snap-name">
                 <h3>SnapContact</h3>
